# YiXian

./: .gitignore  CMakeLists.txt  README.md  account.cpp  account.h  battle.h  buff.h  cal.h  deck.cpp  deck.h  effect_task_quene.h  flag.h  head.h  main.cpp  status.cpp  status.h  status_vals.cpp
cards/: base_card.h  cards.h
cards/dx/: dx_hsq.h  dx_init.h  dx_jdq.h  dx_lqq.h  dx_yyq.h  dx_zjq.h
src/: account.cpp  account.h  account_task_quene.h  battle.h  buff.h  cal.cpp  cal.h  deck.cpp  deck.h  effect_task_quene.h  flag.h  game.h  head.h  main.cpp  status.cpp  status.h
src/cards/: base_card.cpp  base_card.h  cards.h
src/cards/dx/: dx_hsq.cpp  dx_hsq.h  dx_init.h  dx_jdq.cpp  dx_jdq.h  dx_lqq.cpp  dx_lqq.h  dx_yyq.cpp  dx_yyq.h  dx_zjq.cpp  dx_zjq.h
src/cards/qt/: qt_init.h  qt_lqq.cpp  qt_lqq.h
src/cards/zsxm/: zsxm_hsq.cpp  zsxm_hsq.h  zsxm_init.h  zsxm_jdq.cpp  zsxm_jdq.h  zsxm_lqq.cpp  zsxm_lqq.h  zsxm_yyq.cpp  zsxm_yyq.h  zsxm_zjq.cpp  zsxm_zjq.h
src/destinys/: base_destiny.cpp  base_destiny.h
src/roles/: base_destiny.cpp  base_destiny.h  base_role.cpp  base_role.h  destinies.h  roles.h
src/roles/dx/: dx_tukui.cpp  dx_tukui.h  dx_xiaobu.cpp  dx_xiaobu.h  dx_yemingming.cpp  dx_yemingming.h  role_dx_init.h
src/status_effects/: base_status_effect.cpp  base_status_effect.h  buffs.cpp  buffs.h  debuffs.cpp  debuffs.h  status_effects.h  status_vals.cpp  status_vals.h
status_effects/: base_status_effect.h  buffs.h  debuffs.h  status_effects.h  status_vals.h
yaml/: battle_info.yaml  enemy_info.yaml  my_info.yaml
